Terraform/aws_3_tier_application/route-tb.tf
resource "aws_route_table" "rtb" {

  vpc_id = aws_vpc.main.id

  route {

    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "myroute"
  }
}

resource "aws_route_table_association" "rtas" {
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.rtb.id
  count          = 2

}


# Adding NAT gateway into the default main route table

resource "aws_default_route_table" "dfltrtb" {
    default_route_table_id = aws_vpc.main.default_route_table_id

    route {

        cidr_block = "0.0.0.0/0"
        gateway_id = aws_nat_gateway.natgw.id
    }

  tags = {
    Name = "dfltrtb"
  }
}
